GravityMark segfault when using ray tracing ANV
- OS: Ubuntu 22.04
- Mesa 22.3-devel (d50db140)
- GPU: Arc A380 (56a5)
- Kernel: 6.0
Seeing a segfault when running GravityMark with raytracing:
[Switching to Thread 0x7fffe857c640 (LWP 34796)]
0x00007fffeaa3d7fd in brw_compact_instructions (p=0x7fffc459ecc0, start_offset=<optimized out>, disasm=<optimized out>) at ../src/intel/compiler/brw_eu_compact.c:2496
2496 int old_ip[(p->next_insn_offset - start_offset) / sizeof(brw_compact_inst) + 1];
(gdb) bt
#0 0x00007fffeaa3d7fd in brw_compact_instructions (p=0x7fffc459ecc0, start_offset=<optimized out>, disasm=<optimized out>)
at ../src/intel/compiler/brw_eu_compact.c:2496
#1 0x00007fffeaa83c01 in fs_generator::generate_code (this=this@entry=0x7fffe856bb00, cfg=cfg@entry=0x7fffc45a4f70,
dispatch_width=dispatch_width@entry=8, shader_stats=..., perf=..., stats=stats@entry=0x7fffe8574e64)
at ../src/intel/compiler/brw_fs_generator.cpp:2581
#2 0x00007fffeaa76de6 in brw_compile_fs (compiler=compiler@entry=0x780230, mem_ctx=mem_ctx@entry=0x7fffc4574890,
params=params@entry=0x7fffe856bd40) at ../src/intel/compiler/brw_fs.cpp:7448
#3 0x00007fffea2af514 in anv_pipeline_compile_fs (prev_stage=<optimized out>, fs_stage=0x7fffe85731f0,
device=<optimized out>, mem_ctx=0x7fffc4574890, compiler=0x780230) at ../src/intel/vulkan/anv_pipeline.c:1376
#4 anv_graphics_pipeline_compile (pipeline=pipeline@entry=0x7fffc4036c90, cache=cache@entry=0x7fffc4107b20,
info=info@entry=0x7fffe857b670, state=state@entry=0x7fffe857a690) at ../src/intel/vulkan/anv_pipeline.c:1958
#5 0x00007fffea2b0d4b in anv_graphics_pipeline_init (alloc=0x0, state=0x7fffe857a690, pCreateInfo=0x7fffe857b670,
cache=0x7fffc4107b20, device=0x7b01b0, pipeline=0x7fffc4036c90) at ../src/intel/vulkan/anv_pipeline.c:2319
#6 anv_graphics_pipeline_create (device=device@entry=0x7b01b0, cache=cache@entry=0x7fffc4107b20,
pCreateInfo=pCreateInfo@entry=0x7fffe857b670, pAllocator=pAllocator@entry=0x0, pPipeline=pPipeline@entry=0x7fffc4036ae0)
at ../src/intel/vulkan/anv_pipeline.c:2397
#7 0x00007fffea2b186c in anv_CreateGraphicsPipelines (_device=0x7b01b0, pipelineCache=0x7fffc4107b20, count=1,
pCreateInfos=<optimized out>, pAllocator=0x0, pPipelines=0x7fffc4036ae0) at ../src/intel/vulkan/anv_pipeline.c:2426
#8 0x00007ffff78352d3 in ?? () from libTellusim_x64.so
#9 0x00007ffff76a5151 in ?? () from libTellusim_x64.so
#10 0x00007ffff76a5c34 in ?? () from libTellusim_x64.so
#11 0x00007ffff74e6272 in ?? () from libTellusim_x64.so
#12 0x00007ffff74f3f4a in ?? () from libTellusim_x64.so
#13 0x00007ffff6a94b43 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#14 0x00007ffff6b26a00 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
Reproduction steps:
- wget https://tellusim.com/download/GravityMark_1.61.run
- Run ./GravityMark_1.61.run
- Select "RT" option.
- Run Benchmark
Benchmark segfaults in the loading screen.
Edited by Kevron Rees